--- a/index.html
+++ b/index.html
@@ -5,9 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>HELLO WORLD</h1>
-    <h2>Hola a todos</h2>
+<body class="grid-container">
+    <header class="header">
+        <h1> MI CV</h1>
+    </header>
+    <aside class="sidebar">
+        <br>
+        <div class="image-profile">
+        <img src="fotoCV.jpg" width="200" height="180">
+       </div>
+
+        <div class="membrete">
+            <br>          
+            <H2> WILBERT ANTONIO SILVA GARCIA</H2>
+            <br>
+            <H4> DESARROLLADOR </H4>
+            <br>
+        </div>
+        <H4> OBJETIVO </H4>
+        <div class="objetivo">
+            <p>Aplicar mis conocimientos y
+                aptitudes de manera responsable
+                y profesional, la cuál me permita
+                incrementarlos y al mismo tiempo
+                impactar de manera positiva en la
+                empresa.</p>
+        </div>
+        <h4> HABILIDADES </H4> 
+        <div class="habilidades"> 
+            <li>Capacidad de trabajo en equipo</li>
+            <li>Capacidad de aprendizaje rápido</li>
+            <li>Emprendedoras mediante el autoconocimiento</li>
+        </div>
+        <H4> CONTACTO </H4>
+        <div class="contacto">
+            <p>951 354 97 33</p>
+            <p>wilbertsga@gmail.com</p>
+            <p>Oaxaca, México</p>
+        </div>
+        <div class="name">
+            <img src="logo.png" width="100" height="100">
+        </div>
+        <a target="_blank" class="logo-btn" href="https://github.com/WilbertSilvaGarcia">WilbertSilvaGarcia</a> 
+    </aside>
+    <article class="main"> 
+        <H3> EXPERIENCIA PROFESIONAL </H3>
+        <div class="ubs">
+            <h5>UBS Proyectos y Construcciones S.A de C.V (Proyecto de Grado) | FEBRERO 2022- AGOSTO 2022 </h5>
+            <h5>Desarrollador Full Stack, Oaxaca de Juárez</h5>
+            <br>
+            <h5>Tareas:</h5>
+                <li>Desarrollo Frontend y Backend usando Java SE versión 8.</li>
+                <li>Desarrollo de la Base Datos y las consultas usando PostgreSQL</li>
+                <li>Depuración de datos usando Python con Jupyter NoteBook.</li>
+            <br>
+            <h5>INSTITUTO TÉCNOLOGICO DE OAXACA, DEPTO. SISTEMAS Y COMPUTACIÓN | SERVICIO SOCIAL 2020</h5>
+            <h5>Auxiliar Administrativo, Oaxaca de Juárez </h5>
+            <br>
+            <h5>Tareas:</h5>
+                <li>Capturar información académica</li>
+                <li>Apoyo y administrativo del departamento.</li>
+                <li>Recepción de documentos.</li>
+                <li>Brindar información a estudiantes de la carrera.</li>
+        </div>
+
+        <H3> CURSOS Y TALLERES </H3>
+        <div class="cursos">
+            <li>Evento “Global Day of Code Retreat Oaxaca 2016” Impartidos
+                por la Comunidad Oaxaca.rb</li>
+            <li>Curso Scrum Foundation Professional Certificate (SFPC).
+                CertiProf.</li>
+            <li>Curso” NETWORK SECURITY” dentro de la XII Jornada
+                Académica</li>
+            <li>Curso de Capacitación de Competencias Tecnológicas Para la
+                Productividad (Microsoft Word, Microsoft Excel y Microsoft
+                PowePoint).</li>
+            <li>Taller de Módulo 1 “Semilla” y Módulo 2 “Líder” Impartidos por
+                el Centro de Emprendedores del CBTis No.123</li>
+        </div>
+        <H3> IDIOMAS </H3>
+        <div class="idiomas">
+             <li>Español : Nativo </li>
+             <li> Inglés : Medio </li>
+        </div>
+        <H3> EDUCACIÓN </H3>
+        <div class="educacion">
+            <p>2015 | Oaxaca de Juárez- México</p>
+            <h5>Técnico Administrativo de Recursos Humanos</h5>
+            <p>Centro Bachillerato Tecnológico industrial y de servicios No. 123</p>
+            <br>
+            <p>2022 | Oaxaca de Juárez - México</p>
+            <h5>Egresado de la Carrera de Ing. Sistemas Computacionales</h5>
+            <p>Instituto Tecnológico de Oaxaca</p>
+        </div>
+    </article>
 </body>
 </html>
